# compila

./: README.md  meson.build
include/: ast.hh  compiler.hh  termcolors.hh
src/: ast.cc  bison.yy  compiler.cc  flex.l  flex.ll  main.cc
test/: bad.txt  good.txt  lexic.txt  numbers.txt  simple.txt
test/semantic/: arithmetic-error.txt  input.txt  logical-error.txt  missing-return.txt  redeclaration.txt  redefinition.txt  too-few-args.txt  too-many-args.txt  type-assign.txt  type-cast.txt  undeclared.txt  undefined.txt  wrong-args.txt  wrong-array-size.txt  wrong-return.txt
test/sintax/: array.txt  begin.txt  if.txt  print.txt  return-type.txt  while.txt
